compiler/testData/diagnostics/tests/cast/kt614.kt
fun f(a: Collection<*>) = a is List<*><!USELESS_NULLABLE_CHECK!>?<!>